--- a/easy-shopping-ui/src/pages/Home/Home.css
+++ b/easy-shopping-ui/src/pages/Home/Home.css
@@ -69,7 +69,6 @@
   .home-item-details {
     gap: 10px;
     grid-template-columns: repeat(2, 1fr);
-    transition: none;
   }
 }
 
@@ -77,7 +76,6 @@
   .home-item-details {
     gap: 10px;
     grid-template-columns: repeat(2, 1fr);
-    transition: none;
   }
 }
 
